--- a/src/app/modules/commodity/card/card.component.html
+++ b/src/app/modules/commodity/card/card.component.html
@@ -7,10 +7,11 @@
   <button nz-button nzType="primary" (click)="update()" style="margin-bottom: 16px;">添加学籍项</button>
 
 
-  <ea-table #table url="/commodity/card/getCardTypeList" [thead]="['名称','学籍类型','最低折扣','创建人','创建时间','售价','销量','状态','操作']"
+  <ea-table #table url="/commodity/card/getCardTypeList" [thead]="['名称','剩余天数/月份','学籍类型','最低折扣','创建人','创建时间','售价','销量','状态','操作']"
     [EaTableTbodyTr]="EaTableTbodyTr" [allowSpace]="false">
     <ng-template let-data #EaTableTbodyTr>
       <td>{{ data.cardTypeName }}</td>
+      <td>{{ data.day ? data.day + '天' : data.month ? data.month + '月' : '--' }}</td>
       <td>{{ data.type == 1 ? '次卡' : '月卡' }}</td>
       <td>{{ data.lowestDiscount }}</td>
       <td>{{ data.name }}</td>
