--- a/src/app/modules/teacher/list/list.component.html
+++ b/src/app/modules/teacher/list/list.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <ea-list-page-simp #listPage url="/teacher/getTeachersList" [queryNode]="queryNode" [paramsDefault]="{status: 1}"
+    <ea-list-page-simp #listPage url="/teacher/getTeachersList" [queryNode]="queryNode" 
         [tableThead]="[ '头像', '名字', '昵称', '手机号' ,'性别', '角色', '是否是主管', '在职状态' ,'所属班级', '年龄', '生日', '操作' ]" [EaBtns]="EaBtns"
          [EaTableTbodyTr]="EaTableTbodyTr">
     </ea-list-page-simp>
