--- a/src/app/modules/public/customer-preview/delay/delay.component.html
+++ b/src/app/modules/public/customer-preview/delay/delay.component.html
@@ -10,7 +10,7 @@
       <nz-form-control>
         <nz-range-picker  formControlName="time" [nzPlaceHolder]="['开始时间', '结束时间']"></nz-range-picker>
         <nz-form-explain *ngIf="valid('time')">请选择延期时间！</nz-form-explain>
-        <nz-form-explain *ngIf="valid('time', 'error')">延期时间必须选择10天及以上！</nz-form-explain>
+        <!-- <nz-form-explain *ngIf="valid('time', 'error')">延期时间必须选择10天及以上！</nz-form-explain> -->
       </nz-form-control>
     </nz-form-item>
     <nz-form-item>
